Add Docker deployment configuration

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 fastapi
-uvicorn
+uvicorn[standard]
 redis
 openai
 langchain
 langgraph
+sentence-transformers
+faiss-cpu
 pypdf
 python-dotenv
 python-docx
