Refactor: Complete RAG architecture transformation
- Switched from OpenAI to Google Gemini API (gemini-2.5-flash)
- Added ChromaDB vector database for embeddings storage
- Created proper project structure with services, models, core, utils
- Implemented DocumentService for PDF/DOCX/TXT parsing
- Implemented EmbeddingService with Gemini text-embedding-004
- Implemented VectorService with ChromaDB
- Implemented LLMService with Gemini 2.5 Flash
- Added TextChunker with overlapping chunks
- Created Pydantic schemas for API validation
- Added custom exceptions and centralized configuration
- Created new RAG API endpoints: /api/upload, /api/query, /api/health
- Maintained backward compatibility with legacy endpoints
- Added unit tests for chunking, document service, and API
- Updated Docker configuration for new architecture

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,35 @@
-# Sample environment file
+# Nexus AI Agent Environment Configuration
 # Copy this to .env and fill in your values
 
-OPENAI_API_KEY=your_openai_api_key_here
+# ============== API Keys ==============
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# ============== Vector Database ==============
+CHROMA_PERSIST_DIRECTORY=./data/chroma
+
+# ============== Embedding Settings ==============
+EMBEDDING_MODEL=models/text-embedding-004
+EMBEDDING_DIMENSIONS=768
+
+# ============== Document Processing ==============
+CHUNK_SIZE=1000
+CHUNK_OVERLAP=200
+MAX_FILE_SIZE_MB=10
+
+# ============== LLM Settings ==============
+LLM_MODEL=gemini-2.0-flash
+LLM_TEMPERATURE=0.1
+MAX_TOKENS=1000
+
+# ============== Retrieval ==============
+TOP_K_CHUNKS=5
+SIMILARITY_THRESHOLD=0.7
+
+# ============== Redis (Optional) ==============
 REDIS_HOST=localhost
 REDIS_PORT=6379
+
+# ============== Server ==============
+# HOST=0.0.0.0
+# PORT=8000
+# LOG_LEVEL=INFO
